# PKbSuite

./: .gitignore  .gitmodules  .travis.disabled.yml  CMakeLists.txt  README.md
.kdev4/: PKbSuite.kdev4
build-systems/aur/: .SRCINFO  PKGBUILD  build-for-aur.sh  install-package.sh  pkbsuite-0.1.0.tar.xz
src/: .version.h.kate-swp  CMakeLists.txt  Makefile  PKbSuite.desktop  PKbSuite.kdev4  PKbSuite.pro  PKbSuite.rc  _CMakeLists.txt  breeze-dark-pkbsuite.qrc  breeze-pkbsuite.qrc  build_number.h  configurations.qrc  demonotes.qrc  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pdffile.cpp  pdffile.h  pkbsuite.qrc  release.h  version.h
src/.kdev4/: PKbSuite.kdev4  src.kdev4
src/api/: noteapi.cpp  noteapi.h
src/demonotes/: Markdown Cheatsheet.md  Welcome to PKbSuite.md
src/dialogs/: aboutdialog.ui  attachmentdialog.cpp  attachmentdialog.ui  dictionarymanagerdialog.cpp  dictionarymanagerdialog.ui  dropPDFDialog.cpp  dropPDFDialog.h  dropPDFDialog.ui  imagedialog.cpp  imagedialog.ui  linkdialog.cpp  linkdialog.ui  localtrashdialog.cpp  localtrashdialog.ui  masterdialog.cpp  masterdialog.h  notedialog.cpp  notedialog.h  notedialog.ui  notediffdialog.cpp  notediffdialog.ui  orphanedattachmentsdialog.cpp  orphanedattachmentsdialog.ui  orphanedimagesdialog.cpp  orphanedimagesdialog.h  orphanedimagesdialog.ui  passworddialog.ui  scriptrepositorydialog.cpp  scriptrepositorydialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  storedattachmentsdialog.cpp  storedimagesdialog.cpp  storedimagesdialog.ui  tabledialog.cpp  tabledialog.ui  tagadddialog.ui  websockettokendialog.ui  welcomedialog.cpp  (+2 more)
src/entities/: bookmark.cpp  bookmark.h  note.cpp  note.h  notefolder.cpp  notefolder.h  notehistory.cpp  notehistory.h  notemap.cpp  notemap.h  script.cpp  tag.cpp  tagmap.cpp  tagmap.h
src/helpers/: pkbsuitemarkdownhighlighter.cpp  pkbsuitemarkdownhighlighter.h  qownspellchecker.cpp  qownspellchecker.h
src/html/: about.html
src/icons/breeze-dark-pkbsuite/: copy-from-breeze-dark.sh  index.theme
src/icons/breeze-pkbsuite/: index.theme
src/icons/pkbsuite/: index.theme
src/languages/: PKbSuite_en.qm  PKbSuite_en.ts  PKbSuite_fr.qm  PKbSuite_fr.ts  YDFhEq.json
src/libraries/qdarkstyle/: style.qss
src/libraries/sonnet/src/core/: loader.cpp
src/libraries/sonnet/src/plugins/hunspell/: hunspellclient.cpp  hunspelldict.cpp
src/services/: databaseservice.cpp  scriptingservice.cpp  scriptingservice.h  webappclientservice.cpp  websocketserverservice.cpp
src/utils/: gui.cpp  gui.h  kbgraph.cpp  kbgraph.h  misc.cpp  misc.h  pdffile.cpp
src/widgets/: combobox.cpp  fontcolorwidget.cpp  fontcolorwidget.h  kbgraphwidget.cpp  kbgraphwidget.h  navigationwidget.cpp  navigationwidget.h  notepreviewwidget.cpp  notepreviewwidget.h  pkbsuitemarkdowntextedit.cpp  pkbsuitemarkdowntextedit.h
